# stm32f4_sdram_baseboard

./: .gitignore  .gitmodules  README.md
base_board/: base_board.kicad_pcb  base_board.kicad_prl  base_board.kicad_pro  base_board.kicad_sch  fp-info-cache  fp-lib-table  sensors.kicad_sch  sym-lib-table
base_board/fabrication_output/: base_board-B_Cu.gbl  base_board-B_Mask.gbs  base_board-B_Paste.gbp  base_board-B_Silkscreen.gbo  base_board-Edge_Cuts.gm1  base_board-F_Cu.gtl  base_board-F_Mask.gts  base_board-F_Paste.gtp  base_board-F_Silkscreen.gto  base_board-In2_Cu.g3  base_board-NPTH-drl_map.gbr  base_board-NPTH.drl  base_board-PTH-drl_map.gbr  base_board-PTH.drl  base_board-ground_plane.g5  base_board-power.g2  base_board-power_plane.g4
base_board/project_libraries/ASCO-8.000MHZ-EK-T3/: ASCO-8.000MHZ-EK-T3.kicad_sym  XTAL_ASCO-8.000MHZ-EK-T3.kicad_mod
base_board/project_libraries/BMI270/: BMI270.kicad_sym  XDCR_BMI270.kicad_mod
base_board/project_libraries/EG2209A/: EG2209A.kicad_sym  EG2209A.step  SW_EG2209A.kicad_mod
base_board/project_libraries/SS-52400-002/: BELFUSE_SS-52400-002.kicad_mod  SS-52400-002.kicad_sym  SS-52400-002.step
cube_project/: .cproject  .mxproject  .project  STM32F446ZEJX_FLASH.ld  STM32F446ZEJX_RAM.ld  cube_project Debug.launch  cube_project.ioc  software_architecture.drawio
cube_project/Core/Inc/: main.h  sdram.h  stm32f4xx_hal_conf.h
cube_project/Core/Src/: main.c  sdram.c  stm32f4xx_hal_msp.c
cube_project/Drivers/hal_ports/: bmi270_port.c  bmi270_port.h
rust_firmware/: Cargo.toml  Embed.toml
rust_firmware/src/: main.rs  sdram_impl.rs
